<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.cmclinnovations</groupId>
  <artifactId>stack-manager</artifactId>
  <version>1.8.1</version>

  <name>Stack Manager</name>
  <url>https://www.cmclinnovations.com</url>

  <parent>
    <groupId>uk.ac.cam.cares.jps</groupId>
    <artifactId>jps-parent-pom</artifactId>
    <version>2.2.0</version>
  </parent>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
  </properties>

  <dependencies>

    <dependency>
      <groupId>com.cmclinnovations</groupId>
      <artifactId>stack-clients</artifactId>
      <version>1.8.1</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-slf4j-impl</artifactId>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
    </dependency>

  </dependencies>

  <build>

    <plugins>
      <plugin>
        <!-- This plugin edits the manifest file that goes inside the .jar file -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifest>
              <!-- These properties add the copied dependencies to the classpath so the .jar can
              find them at runtime. -->
              <addClasspath>true</addClasspath>
              <classpathPrefix>.</classpathPrefix>
              <classpathLayoutType>repository</classpathLayoutType>
              <mainClass>com.cmclinnovations.stack.App</mainClass>
              <useUniqueVersions>false</useUniqueVersions>
            </manifest>
          </archive>
          <outputDirectory>${project.build.directory}/lib</outputDirectory>
        </configuration>
      </plugin>
      <plugin>
        <!-- This plugin copies all of the .jar dependencies into a 'lib' folder in the target
        directory. -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <id>copy-jar-dependencies</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <includeScope>runtime</includeScope>
              <outputDirectory>${project.build.directory}/lib</outputDirectory>
              <useRepositoryLayout>true</useRepositoryLayout>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>